Fix clang compile errors in Web Audio https://bugs.webkit.org/show_bug.cgi?id=68384

Reviewed by David Levin.

No new tests; no net change in functionality.

* platform/graphics/MediaPlayer.h: Forward declare (instead of including directly)
    AudioSourceProvider.
* webaudio/AudioChannelMerger.cpp:
(WebCore::AudioChannelMerger::checkNumberOfChannelsForInput): Remove unused parameter name.

Canonical link: https://commits.webkit.org/84431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95586 268f45cc-cd09-0410-ab3c-d52691b4dbfc